--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "framer-motion": "^12.6.2",
