--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
