--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "next": "^15.2.4",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.0",
     "postcss": "^8.4.35",
     "react": "^19.0.0",
@@ -34,5 +35,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/node-telegram-bot-api": "^0.64.8"
   }
 }
