--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "eslint-config-next": "14.1.0",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
-    "next": "^15.2.4",
+    "next": "14.1.0",
     "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.10.0",
     "postcss": "^8.4.35",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
