--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,25 @@
-# Упрощенная конфигурация Nginx для timeweb.cloud
+# Конфигурация Nginx для timeweb.cloud
 # timeweb.cloud автоматически управляет SSL и базовой конфигурацией
 
 server {
     listen 80;
     server_name littlebarista.ru www.littlebarista.ru;
     
-    # Редирект на HTTPS (если SSL включен)
-    return 301 https://$server_name$request_uri;
+    # Проксирование к Next.js приложению (работает и по HTTP)
+    location / {
+        proxy_pass http://localhost:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+    }
 }
 
+# Дополнительная конфигурация для HTTPS (если SSL включен)
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name littlebarista.ru www.littlebarista.ru;
     
     # SSL настройки (timeweb.cloud управляет сертификатами)
@@ -24,5 +33,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
     }
 }
