Fix 404 error: add timeweb-specific nginx config and improve Docker setup

--- a/timeweb-nginx.conf
+++ b/timeweb-nginx.conf
@@ -1,5 +1,5 @@
-# Упрощенная конфигурация Nginx для timeweb.cloud
-# timeweb.cloud может не использовать этот файл, но оставляем для совместимости
+# Конфигурация Nginx специально для timeweb.cloud
+# Этот файл должен использоваться вместо стандартного nginx.conf
 
 server {
     listen 80;
@@ -15,20 +15,19 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         
-        # Дополнительные заголовки для Next.js
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-        
         # Настройки для правильной работы с Next.js
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_cache_bypass $http_upgrade;
+        
+        # Таймауты
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
     
-    # Обработка статических файлов
+    # Обработка статических файлов Next.js
     location /_next/static/ {
         proxy_pass http://localhost:3000;
         proxy_set_header Host $host;
@@ -40,5 +39,18 @@ server {
         proxy_pass http://localhost:3000;
         proxy_set_header Host $host;
         add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    
+    # Обработка favicon
+    location /favicon.ico {
+        proxy_pass http://localhost:3000;
+        proxy_set_header Host $host;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+    }
+    
+    # Обработка robots.txt
+    location /robots.txt {
+        proxy_pass http://localhost:3000;
+        proxy_set_header Host $host;
     }
 }
