--- a/.dockerignore
+++ b/.dockerignore
@@ -1,51 +1,15 @@
-# Зависимости
 node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Сборка
 .next
-out
-dist
-
-# Переменные окружения
-.env
+.git
+.gitignore
+README.md
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Логи
-*.log
-
-# Временные файлы
-.tmp
-.temp
-
-# IDE
-.vscode
-.idea
-*.swp
-*.swo
-
-# OS
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .DS_Store
-Thumbs.db
-
-# Git
-.git
-.gitignore
-
-# Документация
-README.md
-*.md
-
-# Тесты
-coverage
-.nyc_output
-
-# Другие
-.dockerignore
-Dockerfile
-docker-compose.yml
+*.tsbuildinfo
+next-env.d.ts
