--- a/timeweb.config.json
+++ b/timeweb.config.json
@@ -1,8 +1,8 @@
 {
   "name": "LittleBarista",
-  "description": "Сайт кофейного сервиса Little Barista - Frontend App",
+  "description": "Сайт кофейного сервиса Little Barista - Static Website",
   "version": "1.0.0",
-  "type": "frontend",
+  "type": "static",
   "framework": "nextjs",
   "build": {
     "command": "npm run build",
@@ -11,7 +11,8 @@
   },
   "deploy": {
     "platform": "timeweb.cloud",
-    "type": "static",
+    "type": "docker",
+    "dockerfile": "Dockerfile",
     "environment": {
       "NODE_ENV": "production"
     },
@@ -26,6 +27,9 @@
     "redirects": {
       "http_to_https": true,
       "www_redirect": true
+    },
+    "nginx": {
+      "config": "nginx.conf"
     }
   }
 }
