Исправление конфигурации nginx и timeweb для устранения 404 ошибок

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,12 +9,12 @@ server {
     }
     
     # Корневая директория со статическими файлами
-    root /var/www/html;
+    root /var/www/html/out;
     index index.html index.htm;
     
     # Основная локация
     location / {
-        try_files $uri $uri/ $uri.html /index.html;
+        try_files $uri $uri/ @fallback;
         
         # Заголовки для кэширования
         add_header Cache-Control "public, max-age=3600";
@@ -24,6 +24,11 @@ server {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    }
+    
+    # Fallback для SPA роутинга
+    location @fallback {
+        try_files /index.html =404;
     }
     
     # Статические файлы с длительным кэшированием
@@ -94,12 +99,12 @@ server {
     }
     
     # Корневая директория со статическими файлами
-    root /var/www/html;
+    root /var/www/html/out;
     index index.html index.htm;
     
     # Основная локация
     location / {
-        try_files $uri $uri/ $uri.html /index.html;
+        try_files $uri $uri/ @fallback_ssl;
         
         # Заголовки для кэширования
         add_header Cache-Control "public, max-age=3600";
@@ -110,6 +115,11 @@ server {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    }
+    
+    # Fallback для SPA роутинга (HTTPS)
+    location @fallback_ssl {
+        try_files /index.html =404;
     }
     
     # Статические файлы с длительным кэшированием
