Упрощение конфигурации для соответствия FreshRoom - переименование timeweb.config.json в timeweb.json и упрощение nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,169 +1,13 @@
 server {
     listen 80;
-    listen [::]:80;
     server_name littlebarista.ru www.littlebarista.ru;
     
-    # Редирект с www на основной домен
-    if ($host = www.littlebarista.ru) {
-        return 301 http://littlebarista.ru$request_uri;
-    }
-    
-    # Корневая директория со статическими файлами
     root /var/www/html/out;
-    index index.html index.htm;
+    index index.html;
     
-    # Основная локация
     location / {
-        try_files $uri $uri/ @fallback;
-        
-        # Заголовки для кэширования
-        add_header Cache-Control "public, max-age=3600";
-        
-        # Заголовки безопасности
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        try_files $uri $uri/ /index.html;
     }
     
-    # Fallback для SPA роутинга
-    location @fallback {
-        try_files /index.html =404;
-    }
-    
-    # Статические файлы с длительным кэшированием
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        add_header X-Content-Type-Options "nosniff" always;
-    }
-    
-    # Файлы Next.js
-    location /_next/static/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-    
-    # Изображения
-    location /images/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-    
-    # Gzip сжатие
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/json
-        application/javascript
-        application/xml+rss
-        application/atom+xml
-        image/svg+xml;
-    
-    # Обработка ошибок
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
-    # Логирование
-    access_log /var/log/nginx/littlebarista_access.log;
-    error_log /var/log/nginx/littlebarista_error.log;
-}
-
-# HTTPS конфигурация (если SSL настроен)
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name littlebarista.ru www.littlebarista.ru;
-    
-    # SSL сертификаты (замените на ваши пути)
-    ssl_certificate /etc/ssl/certs/littlebarista.ru.crt;
-    ssl_certificate_key /etc/ssl/private/littlebarista.ru.key;
-    
-    # SSL настройки
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    
-    # Редирект с www на основной домен
-    if ($host = www.littlebarista.ru) {
-        return 301 https://littlebarista.ru$request_uri;
-    }
-    
-    # Корневая директория со статическими файлами
-    root /var/www/html/out;
-    index index.html index.htm;
-    
-    # Основная локация
-    location / {
-        try_files $uri $uri/ @fallback_ssl;
-        
-        # Заголовки для кэширования
-        add_header Cache-Control "public, max-age=3600";
-        
-        # Заголовки безопасности
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    }
-    
-    # Fallback для SPA роутинга (HTTPS)
-    location @fallback_ssl {
-        try_files /index.html =404;
-    }
-    
-    # Статические файлы с длительным кэшированием
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        add_header X-Content-Type-Options "nosniff" always;
-    }
-    
-    # Файлы Next.js
-    location /_next/static/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-    
-    # Изображения
-    location /images/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-    
-    # Gzip сжатие
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/json
-        application/javascript
-        application/xml+rss
-        application/atom+xml
-        image/svg+xml;
-    
-    # Обработка ошибок
-    error_page 404 /404.html;
-    error_page 500 502 503 504 /50x.html;
-    
-    # Логирование
-    access_log /var/log/nginx/littlebarista_ssl_access.log;
-    error_log /var/log/nginx/littlebarista_ssl_error.log;
 }
 
