--- a/nginx.conf
+++ b/nginx.conf
@@ -2,12 +2,23 @@ server {
     listen 80;
     server_name littlebarista.ru www.littlebarista.ru;
     
-    root /var/www/html/out;
+    root /usr/share/nginx/html;
     index index.html;
     
+    # Handle Next.js static export routing
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ $uri.html /index.html;
     }
     
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+    
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 }
 
